# fusionhub-core

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/capi/: Cargo.toml
crates/capi/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/fusion/: Cargo.toml
crates/fusion/src/: clock.rs  command_router.rs  configuration_node.rs  connected_node.rs  factory.rs  json_eigen_conversions.rs  lib.rs  node.rs  registration.rs  status_poller.rs
crates/fusion/src/encoders/: json_encoder.rs  mod.rs  plain_json_encoder.rs
crates/fusion/src/filters/: data_monitor.rs  example_filter.rs  hand_eye_calibration_filter.rs  inside_out_filter.rs  mod.rs  prediction_filter.rs  script_filter.rs
crates/fusion/src/sinks/: act2535_output.rs  data_monitor.rs  dtrack_output_node.rs  echo_sink.rs  example_sink.rs  file_logger.rs  legacy_file_recorder.rs  mod.rs  mqtt_sink.rs  nmea_sink.rs  ros2_sink.rs  vrpn_sink.rs  websocket_sink.rs
crates/fusion/src/sources/: act2535_data_format.rs  act2535_source.rs  antilatency_source.rs  automotive_vehicle_source.rs  can_data_source.rs  dtrack_optical_source.rs  elm327_source.rs  example_source.rs  file_reader.rs  gnss_source.rs  hid_imu_source.rs  imu_p_source.rs  imu_source.rs  mod.rs  mqtt_source.rs  nmea_source.rs  ntrip_source.rs  openzen_imu_source.rs  optical_source.rs  optitrack_optical_source.rs  peak_can_source.rs  rtcm_source.rs  vector_can_source.rs  vicon_optical_source.rs  xreal_air2_ultra_imu.rs
crates/fusion/src/tests/: mod.rs  test_act2535.rs  test_clock_time.rs  test_connected_node.rs  test_eigen_json_conversion.rs  test_imu_queue_delay.rs  test_json_encoder.rs  test_mqtt_sink.rs  test_nmea_sink.rs  test_nmea_source_v2.rs  test_ntrip_source.rs  test_prediction_filter.rs  test_protobuf_encoder.rs
crates/fusion_protobuf/: Cargo.toml  build.rs
crates/fusion_protobuf/proto/: stream_data.proto
crates/fusion_protobuf/src/: lib.rs
crates/fusion_registry/: Cargo.toml
crates/fusion_registry/src/: lib.rs
crates/fusion_types/: Cargo.toml
crates/fusion_types/src/: lib.rs
crates/lockit/: Cargo.toml
crates/lockit/src/: lib.rs
crates/log_utils/: Cargo.toml
crates/log_utils/src/: lib.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: data_buffer.rs  lib.rs  server.rs
crates/networking/: Cargo.toml
crates/networking/src/: command.rs  disk.rs  lib.rs  network_writer.rs  probe.rs  publisher.rs  runtime.rs  subscriber.rs
crates/networking/tests/: integration_tests.rs
crates/openzen-sys/: Cargo.toml  build.rs
crates/openzen-sys/src/: lib.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs  main.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs  main.rs
crates/web_ui/: Cargo.toml  build.rs
crates/web_ui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/web_ui/frontend/src/: App.tsx  index.css  main.tsx
crates/web_ui/frontend/src/api/: client.ts  types.ts
crates/web_ui/frontend/src/components/Dashboard/: Dashboard.tsx
crates/web_ui/frontend/src/components/Extensions/: ExtensionLoader.tsx
crates/web_ui/frontend/src/components/Layout/: Layout.tsx
crates/web_ui/frontend/src/components/License/: LicenseView.tsx
crates/web_ui/frontend/src/components/Logs/: Logs.tsx
crates/web_ui/frontend/src/components/NodeEditor/: ConsolePanel.tsx  NodeEditor.css  NodeEditor.tsx  NodePalette.tsx  OscilloscopePanel.tsx  PropertiesPanel.tsx  oscilloscopeBuffer.ts
crates/web_ui/frontend/src/components/NodeEditor/hooks/: useConfigExport.ts  useConfigImport.ts
crates/web_ui/frontend/src/components/NodeEditor/nodes/: ExternalNode.tsx  FilterNode.tsx  SinkNode.tsx  SourceNode.tsx
crates/web_ui/frontend/src/components/NodeEditor/utils/: connectionValidator.ts  endpointGenerator.ts  externalNodeTypes.ts  nodeStatusMapper.ts
crates/web_ui/frontend/src/data/: nodeRegistry.ts
crates/web_ui/frontend/src/hooks/: useActiveExtensions.ts  useSSE.ts
crates/web_ui/frontend/src/stores/: appStore.ts
crates/web_ui/frontend/src/types/: nodes.ts
crates/web_ui/src/: lib.rs  oscilloscope.rs
crates/web_ui/src/ui/: index.html  style.css
crates/websocket_server/: Cargo.toml
crates/websocket_server/src/: lib.rs
src/: main.rs  wiring.rs
