[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log_utils = { path = "../log_utils" }
susi_client = { path = "../../external/susi/crates/susi_client" }
susi_core = { path = "../../external/susi/crates/susi_core" }

[dev-dependencies]
chrono = { workspace = true }
