[package]
name = "mcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
fusion_types = { path = "../fusion_types" }
fusion_registry = { path = "../fusion_registry" }
web_ui = { path = "../web_ui" }
websocket_server = { path = "../websocket_server" }
networking = { path = "../networking" }
