[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]
zeromq = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fusion_types = { path = "../fusion_types" }
fusion_protobuf = { path = "../fusion_protobuf" }
log_utils = { path = "../log_utils" }
anyhow = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true }
